--- a/login-register/index.html
+++ b/login-register/index.html
@@ -15,6 +15,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="border rounded p-4">
+                    <h1 class="text-center">Register</h1>
                     <form action="login.html" method="get">
                         <div class="mb-3">
                             <label for="fullName" class="form-label">Full Name</label>
